--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                 <div class="rows">
                     <div class="row-1">
                         <h3>Length (Meter/Feet)</h3>
-                        <p id="length-result" class="length">0 meters = 0 feet | 0 feet = 0 meters</p>
+                        <p id="length-result" class="length">0 meters = 0 feet / 0 feet = 0 meters</p>
                     </div>
                     <div class="row-2">
                         <h3>Volume (Liters/Gallons)</h3>
-                        <p id="volume-result" class="volume">0 liters = 0 gallons | 0 gallons = 0 liters</p>
+                        <p id="volume-result" class="volume">0 liters = 0 gallons / 0 gallons = 0 liters</p>
                     </div>
                     <div class="row-3">
                         <h3>Mass (Kilograms/Pounds)</h3>
-                        <p id="mass-result" class="mass">0 kilos = 0 pounds | 0 pounds = 0 kilos</p>
+                        <p id="mass-result" class="mass">0 kilos = 0 pounds / 0 pounds = 0 kilos</p>
                     </div>
                 </div>
             </div>
